@@ -4,7 +4,7 @@
 # not continually reading --help!
 
 # Version of Kismet config
-version=2.9.1a
+version=2.9.1b
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
@@ -68,11 +68,14 @@ maxclients=5
 #     wsp100        - WSP100 embedded remote sensor.  
 #     wtapfile      - Saved file of packets readable by libwiretap
 #     ar5k          - ar5k 802.11a using the vt_ar5k drivers
+#     drone         - Kismet remote drone
 # Capture interface - Specifies the network interface Kismet will watch for
 #  packets to come in on.  Typically "ethX" or "wlanX".  For the WSP100 capture
 #  engine, the WSP100 device sends packets via a UDP stream, so the capture
 #  interface should be in the form of host:port where 'host' is the WSP100 and 
-#  'port' is the local UDP port that it will send data to.
+#  'port' is the local UDP port that it will send data to.  
+#  Kismet remote drones function similarly and the interface should be the
+#  host:port of the drone.
 # Capture Name      - The name Kismet uses for this capture source.  This is the 
 #   name used to specify what sources to enable.
 # 
