@@ -1,0 +1,57 @@
+# Kismet drone config file
+
+version=2.9.1
+
+# Name of server (Purely for organiational purposes)
+servername=Kismet
+
+# User to setid to (should be your normal user)
+suiduser=your_user_here
+
+# Port to serve packet data... This probably shouldn't be the same as the port
+# you configured kismet_server for, or else you'll have problems running them 
+# on the same system.
+tcpport=3501
+# People allowed to connect, comma seperated IP addresses or network/mask
+# blocks.  Netmasks can be expressed as dotted quad (/255.255.255.0) or as
+# numbers (/24)
+allowedhosts=127.0.0.1
+# Maximum number of concurrent stream attachments
+maxclients=5
+
+# Packet sources:
+# source=capture_cardtype,capture_interface,capture_name
+# Card type - Specifies the type of device. It can be one of:
+#     cisco         - Cisco card with Linux Kernel drivers 
+#     cisco_cvs     - Cisco card with CVS Linux drivers
+#     cisco_bsd     - Cisco on *BSD
+#     prism2        - Prism2 using wlan-ng drivers with pcap support (all 
+#                      current versions support pcap)
+#     prism2_hostap - Prism2 using hostap drivers
+#     prism2_legacy - Prism2 using wlan-ng drivers without pcap support (0.1.9)
+#     prism2_bsd    - Prism2 on *BSD
+#     orinoco       - Orinoco cards using Snax's patched driers
+#     generic       - Generic card with no specific support.  You will have 
+#                      to put this into monitor mode yourself!
+#     wsp100        - WSP100 embedded remote sensor.  
+#     wtapfile      - Saved file of packets readable by libwiretap
+#     ar5k          - ar5k 802.11a using the vt_ar5k drivers
+# Capture interface - Specifies the network interface Kismet will watch for
+#  packets to come in on.  Typically "ethX" or "wlanX".  For the WSP100 capture
+#  engine, the WSP100 device sends packets via a UDP stream, so the capture
+#  interface should be in the form of host:port where 'host' is the WSP100 and 
+#  'port' is the local UDP port that it will send data to.
+# Capture Name      - The name Kismet uses for this capture source.  This is the 
+#   name used to specify what sources to enable.
+# 
+# To enable multiple sources, specify a source line for each and then use the
+# enablesources line to enable them.  For example:
+# source=prism2,wlan0,prism
+# source=cisco,eth0,cisco
+
+source=cisco,eth0,Kismet
+
+# Comma-separated list of sources to enable.  This is only needed if you wish 
+# to selectively enable multiple sources.
+# enablesources=prism,cisco
+
